// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector: current plan should get current plan from billing 1`] = `
Object {
  "code": "qwe",
  "status": "private",
}
`;

exports[`plan selector selectAvailablePlans should return active AWS plans 1`] = `
Array [
  Object {
    "awsMarketplace": true,
    "code": "pub-aws",
    "status": "public",
  },
  Object {
    "awsMarketplace": true,
    "code": "pub-aws-free",
    "isFree": true,
    "status": "public",
  },
  Object {
    "awsMarketplace": true,
    "code": "sec-aws",
    "status": "secret",
  },
]
`;

exports[`plan selector selectAvailablePlans should return active paid plans 1`] = `
Array [
  Object {
    "code": "pub",
    "status": "public",
  },
  Object {
    "code": "sec",
    "status": "secret",
  },
]
`;

exports[`plan selector selectAvailablePlans should return active plans 1`] = `
Array [
  Object {
    "code": "pub",
    "status": "public",
  },
  Object {
    "code": "pub-free",
    "isFree": true,
    "status": "public",
  },
  Object {
    "code": "sec",
    "status": "secret",
  },
]
`;

exports[`plan selector selectVisiblePlans should not return new free plans if customer on free1 plan 1`] = `
Array [
  Object {
    "code": "pub",
    "status": "public",
  },
]
`;

exports[`plan selector selectVisiblePlans should return public AWS plans 1`] = `
Array [
  Object {
    "awsMarketplace": true,
    "code": "pub-aws",
    "status": "public",
  },
  Object {
    "awsMarketplace": true,
    "code": "pub-aws-free",
    "isFree": true,
    "status": "public",
  },
]
`;

exports[`plan selector selectVisiblePlans should return public paid plans 1`] = `
Array [
  Object {
    "code": "pub",
    "status": "public",
  },
]
`;

exports[`plan selector selectVisiblePlans should return public plans 1`] = `
Array [
  Object {
    "code": "pub",
    "status": "public",
  },
  Object {
    "code": "pub-free",
    "isFree": true,
    "status": "public",
  },
]
`;
